# server_resource_monitor

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  Trunk.toml
src/: main.rs
