[package]
name = "resource_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.4", features = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures", "wasm"] }
yew = { version = "0.21.0", features = ["csr"] }
